--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../vendor/bootstrap-4/css/bootstrap.min.css">
     <title>Admin</title>
 
+
 </head>
 <body>
 
@@ -44,6 +45,7 @@
 
 <script src="../src/js/config.js"></script>
 <script src="../src/js/helper.js"></script>
+<script src="../src/js/routes.js"></script>
 <script src="../src/js/main.js"></script>
 
 
