--- a/admin/index.html
+++ b/admin/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="main-nav" class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Admin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div id="main-nav" class="navbar-nav">
-            <a class="nav-item nav-link active" href="#categories">Categories</a>
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#categories">Categories</a>
             <a class="nav-item nav-link" href="#posts">Posts</a>
             <a class="nav-item nav-link" href="#products">Products</a>
         </div>
