--- a/admin/index.html
+++ b/admin/index.html
@@ -38,12 +38,37 @@
     </div>
 </div>
 
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
+    Запустить модальное окно
+</button>
+
+<div id="modal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="../vendor/jquery/jquery-3.4.1.min.js"></script>
 <script src="../vendor/bootstrap-4/js/bootstrap.min.js"></script>
 
 
 <script src="../src/js/config.js"></script>
+<script src="../src/js/authorization.js"></script>
 <script src="../src/js/helper.js"></script>
 <script src="../src/js/routes.js"></script>
 <script src="../src/js/main.js"></script>
