добавила ссылку добавить

--- a/admin/index.html
+++ b/admin/index.html
@@ -38,8 +38,16 @@
     </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
-    Запустить модальное окно
+<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">-->
+<!--    Запустить модальное окно-->
+<!--</button>-->
+
+<button type="button" id="btn-enter" class="btn btn-success">
+    Войти
+</button>
+
+<button type="button" id="btn-out" class="btn btn-warning">
+    Выйти
 </button>
 
 <div id="modal" class="modal" tabindex="-1" role="dialog">
