--- a/admin/index.html
+++ b/admin/index.html
@@ -38,9 +38,9 @@
     </div>
 </div>
 
-<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">-->
-<!--    Запустить модальное окно-->
-<!--</button>-->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
+    Запустить модальное окно
+</button>
 
 <button type="button" id="btn-enter" class="btn btn-success">
     Войти
@@ -54,17 +54,27 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
+                <h5 class="modal-title">Modal</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Modal body text goes here.</p>
+                <label for="basic- name">Enter name</label>
+                <div class="input-group mb-3">
+
+                    <input type="text" class="form-control" id="basic- name" aria-describedby="basic-addon3">
+                </div>
+
+                <label for="basic-description">Enter description</label>
+                <div class="input-group mb-3">
+
+                    <input type="text" class="form-control" id="basic-description" aria-describedby="basic-addon3">
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn-save btn btn-primary">Save</button>
             </div>
         </div>
     </div>
