--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
     <title>Admin</title>
 
 
+
 </head>
 <body>
 
@@ -60,10 +61,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <label for="basic- name">Enter name</label>
+
+                <label for="basic-name">Enter name</label>
                 <div class="input-group mb-3">
 
-                    <input type="text" class="form-control" id="basic- name" aria-describedby="basic-addon3">
+                    <input type="text" class="form-control" id="basic-name" aria-describedby="basic-addon3">
                 </div>
 
                 <label for="basic-description">Enter description</label>
@@ -86,6 +88,7 @@
 
 
 <script src="../src/js/config.js"></script>
+<script src="../src/js/modal.js"></script>
 <script src="../src/js/authorization.js"></script>
 <script src="../src/js/helper.js"></script>
 <script src="../src/js/routes.js"></script>
