--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../vendor/bootstrap-4/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
     <title>Admin</title>
-
 
 
 </head>
@@ -59,24 +61,6 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>
-            <div class="modal-body">
-
-                <label for="basic-name">Enter name</label>
-                <div class="input-group mb-3">
-
-                    <input type="text" class="form-control" id="basic-name" aria-describedby="basic-addon3">
-                </div>
-
-                <label for="basic-description">Enter description</label>
-                <div class="input-group mb-3">
-
-                    <input type="text" class="form-control" id="basic-description" aria-describedby="basic-addon3">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn-save btn btn-primary">Save</button>
             </div>
         </div>
     </div>
